# odatacpp-client

./: CMakeLists.txt  README.md
include/compat/: apple_compat.h  linux_compat.h
include/odata/client/: odata_client.h
include/odata/codegen/: code_generation.h  odata_query_builder.h
include/odata/common/: utility.h  xmlhelpers.h
include/odata/communication/: http_service_exception.h
include/odata/core/: odata_json_constants.h  odata_payload.h  odata_primitive_value.h  odata_property_map.h  odata_structured_value.h
include/odata/edm/: edm_type.h
samples/ios/TripPin/TripPin.xcodeproj/project.xcworkspace/xcshareddata/: TripPin.xcscmblueprint
samples/macOS/TripPin/TripPin/: AppDelegate.h  AppDelegate.m  Info.plist  ViewController.h  ViewController.m  ViewController.mm  main.m
samples/macOS/TripPin/TripPin.xcodeproj/: project.pbxproj
samples/macOS/TripPin/TripPin.xcodeproj/project.xcworkspace/xcshareddata/: TripPin.xcscmblueprint
samples/macOS/TripPin/TripPin/Base.lproj/: Main.storyboard
samples/macOS/TripPin/TripPinTests/: TripPinTests.m
samples/macOS/TripPin/TripPinUITests/: TripPinUITests.m
samples/northwind_sample/: northwind_service.cpp  northwind_service.h
src/: CMakeLists.txt
src/client/: odata_client.cpp
src/codegen/: odata_query_path.cpp
src/common/: utility.cpp
src/core/: odata_json_reader.cpp  odata_primitive_value.cpp  odata_property_map.cpp
src/edm/: edm_type.cpp
tests/functional/codegen_tool_test/: codegen_tool_test_case.h
tools/codegentool/: CMakeLists.txt  odata_codegen_writer.cpp
